// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`More account backup with hd wallet with completed backup renders backup option without warning 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
          "flex": 0,
        },
        Object {},
      ]
    }
    style={
      Array [
        Object {
          "borderBottomColor": "rgba(216,216,216,1)",
          "borderBottomWidth": 1,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            About
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Advanced
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Account Recovery
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Account Back Up
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {
                "borderBottomColor": "rgba(216,216,216,1)",
                "borderBottomWidth": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Try uPort
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`More account backup with hd wallet with no completed backup renders with backup option and warning 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
          "flex": 0,
        },
        Object {},
      ]
    }
    style={
      Array [
        Object {
          "borderBottomColor": "rgba(216,216,216,1)",
          "borderBottomWidth": 1,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            About
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Advanced
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Account Recovery
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "rgba(231, 76, 60, 1)",
                  },
                ]
              }
            >
              Account At Risk
            </Text>
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Account Back Up
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {
                "borderBottomColor": "rgba(216,216,216,1)",
                "borderBottomWidth": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Try uPort
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`More account backup without hd wallet renders without backup option 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
          "flex": 0,
        },
        Object {},
      ]
    }
    style={
      Array [
        Object {
          "borderBottomColor": "rgba(216,216,216,1)",
          "borderBottomWidth": 1,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            About
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Advanced
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {
                "borderBottomColor": "rgba(216,216,216,1)",
                "borderBottomWidth": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Try uPort
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`More migrations renders migration steps 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
          "flex": 0,
        },
        Object {},
      ]
    }
    style={
      Array [
        Object {
          "borderBottomColor": "rgba(216,216,216,1)",
          "borderBottomWidth": 1,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            About
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Advanced
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Account Recovery
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {
                    "color": "rgba(231, 76, 60, 1)",
                  },
                ]
              }
            >
              Account At Risk
            </Text>
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Account Back Up
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Migrate PreHD
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {
                "borderBottomColor": "rgba(216,216,216,1)",
                "borderBottomWidth": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Try uPort
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`More renders a connected component as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <More
    connections={Array []}
    dispatch={[Function]}
    hasHDWallet={false}
    navigator={
      FakeNavigator {
        "event": [Function],
        "styles": Object {
          "navBarBackgroundColor": "rgba(246,247,248,1)",
          "navBarButtonColor": "rgba(92,80,202,1)",
          "navBarFontFamily": "NunitoSans-Regular",
          "navBarFontSize": 18,
          "navBarNoBorder": true,
          "navBarTextColor": "rgba(74,74,74,1)",
        },
      }
    }
    pendingMigrations={Array []}
    seedConfirmed={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <MenuItem
          destination="settings.main"
          navigator={
            FakeNavigator {
              "event": [Function],
              "styles": Object {
                "navBarBackgroundColor": "rgba(246,247,248,1)",
                "navBarButtonColor": "rgba(92,80,202,1)",
                "navBarFontFamily": "NunitoSans-Regular",
                "navBarFontSize": 18,
                "navBarNoBorder": true,
                "navBarTextColor": "rgba(74,74,74,1)",
              },
            }
          }
          title="About"
        />,
        <MenuItem
          destination="uport.advanced"
          navigator={
            FakeNavigator {
              "event": [Function],
              "styles": Object {
                "navBarBackgroundColor": "rgba(246,247,248,1)",
                "navBarButtonColor": "rgba(92,80,202,1)",
                "navBarFontFamily": "NunitoSans-Regular",
                "navBarFontSize": 18,
                "navBarNoBorder": true,
                "navBarTextColor": "rgba(74,74,74,1)",
              },
            }
          }
          title="Advanced"
        />,
        false,
        false,
        Array [],
        <MenuItem
          destination="advanced.try-uport"
          last={true}
          navigator={
            FakeNavigator {
              "event": [Function],
              "styles": Object {
                "navBarBackgroundColor": "rgba(246,247,248,1)",
                "navBarButtonColor": "rgba(92,80,202,1)",
                "navBarFontFamily": "NunitoSans-Regular",
                "navBarFontSize": 18,
                "navBarNoBorder": true,
                "navBarTextColor": "rgba(74,74,74,1)",
              },
            }
          }
          title="Try uPort"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "destination": "settings.main",
          "navigator": FakeNavigator {
            "event": [Function],
            "styles": Object {
              "navBarBackgroundColor": "rgba(246,247,248,1)",
              "navBarButtonColor": "rgba(92,80,202,1)",
              "navBarFontFamily": "NunitoSans-Regular",
              "navBarFontSize": 18,
              "navBarNoBorder": true,
              "navBarTextColor": "rgba(74,74,74,1)",
            },
          },
          "title": "About",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "destination": "uport.advanced",
          "navigator": FakeNavigator {
            "event": [Function],
            "styles": Object {
              "navBarBackgroundColor": "rgba(246,247,248,1)",
              "navBarButtonColor": "rgba(92,80,202,1)",
              "navBarFontFamily": "NunitoSans-Regular",
              "navBarFontSize": 18,
              "navBarNoBorder": true,
              "navBarTextColor": "rgba(74,74,74,1)",
            },
          },
          "title": "Advanced",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      false,
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "destination": "advanced.try-uport",
          "last": true,
          "navigator": FakeNavigator {
            "event": [Function],
            "styles": Object {
              "navBarBackgroundColor": "rgba(246,247,248,1)",
              "navBarButtonColor": "rgba(92,80,202,1)",
              "navBarFontFamily": "NunitoSans-Regular",
              "navBarFontSize": 18,
              "navBarNoBorder": true,
              "navBarTextColor": "rgba(74,74,74,1)",
            },
          },
          "title": "Try uPort",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <MenuItem
            destination="settings.main"
            navigator={
              FakeNavigator {
                "event": [Function],
                "styles": Object {
                  "navBarBackgroundColor": "rgba(246,247,248,1)",
                  "navBarButtonColor": "rgba(92,80,202,1)",
                  "navBarFontFamily": "NunitoSans-Regular",
                  "navBarFontSize": 18,
                  "navBarNoBorder": true,
                  "navBarTextColor": "rgba(74,74,74,1)",
                },
              }
            }
            title="About"
          />,
          <MenuItem
            destination="uport.advanced"
            navigator={
              FakeNavigator {
                "event": [Function],
                "styles": Object {
                  "navBarBackgroundColor": "rgba(246,247,248,1)",
                  "navBarButtonColor": "rgba(92,80,202,1)",
                  "navBarFontFamily": "NunitoSans-Regular",
                  "navBarFontSize": 18,
                  "navBarNoBorder": true,
                  "navBarTextColor": "rgba(74,74,74,1)",
                },
              }
            }
            title="Advanced"
          />,
          false,
          false,
          Array [],
          <MenuItem
            destination="advanced.try-uport"
            last={true}
            navigator={
              FakeNavigator {
                "event": [Function],
                "styles": Object {
                  "navBarBackgroundColor": "rgba(246,247,248,1)",
                  "navBarButtonColor": "rgba(92,80,202,1)",
                  "navBarFontFamily": "NunitoSans-Regular",
                  "navBarFontSize": 18,
                  "navBarNoBorder": true,
                  "navBarTextColor": "rgba(74,74,74,1)",
                },
              }
            }
            title="Try uPort"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "destination": "settings.main",
            "navigator": FakeNavigator {
              "event": [Function],
              "styles": Object {
                "navBarBackgroundColor": "rgba(246,247,248,1)",
                "navBarButtonColor": "rgba(92,80,202,1)",
                "navBarFontFamily": "NunitoSans-Regular",
                "navBarFontSize": 18,
                "navBarNoBorder": true,
                "navBarTextColor": "rgba(74,74,74,1)",
              },
            },
            "title": "About",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "destination": "uport.advanced",
            "navigator": FakeNavigator {
              "event": [Function],
              "styles": Object {
                "navBarBackgroundColor": "rgba(246,247,248,1)",
                "navBarButtonColor": "rgba(92,80,202,1)",
                "navBarFontFamily": "NunitoSans-Regular",
                "navBarFontSize": 18,
                "navBarNoBorder": true,
                "navBarTextColor": "rgba(74,74,74,1)",
              },
            },
            "title": "Advanced",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "destination": "advanced.try-uport",
            "last": true,
            "navigator": FakeNavigator {
              "event": [Function],
              "styles": Object {
                "navBarBackgroundColor": "rgba(246,247,248,1)",
                "navBarButtonColor": "rgba(92,80,202,1)",
                "navBarFontFamily": "NunitoSans-Regular",
                "navBarFontSize": 18,
                "navBarNoBorder": true,
                "navBarTextColor": "rgba(74,74,74,1)",
              },
            },
            "title": "Try uPort",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "context": Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "storeSubscription": Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`More renders more screen with 0 contacts 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
          "flex": 0,
        },
        Object {},
      ]
    }
    style={
      Array [
        Object {
          "borderBottomColor": "rgba(216,216,216,1)",
          "borderBottomWidth": 1,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            About
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Advanced
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {
                "borderBottomColor": "rgba(216,216,216,1)",
                "borderBottomWidth": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Try uPort
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`More renders more screen with 2 contacts 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(246,247,248,1)",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": "rgba(246,247,248,1)",
          "flex": 0,
        },
        Object {},
      ]
    }
    style={
      Array [
        Object {
          "borderBottomColor": "rgba(216,216,216,1)",
          "borderBottomWidth": 1,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            About
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Advanced
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "rgba(216,216,216,1)",
                "borderTopWidth": 1,
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 19,
              },
              Object {
                "borderBottomColor": "rgba(216,216,216,1)",
                "borderBottomWidth": 1,
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(170,170,170,1)",
                "fontFamily": "NunitoSans-Regular",
                "fontSize": 16,
                "lineHeight": 22,
              }
            }
          >
            Try uPort
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "rgba(74,74,74,1)",
                    "fontFamily": "NunitoSans-Light",
                    "fontSize": 14,
                    "lineHeight": 22,
                  },
                  Object {},
                ]
              }
            />
            <Icon
              color="rgba(216,216,216,1)"
              name="ios-arrow-forward-outline"
              size={20}
              style={
                Object {
                  "marginLeft": 16,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
